--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
   <title>Netzke Task Manager</title>
   <%= load_netzke %>
   <%= csrf_meta_tags %>
+  <style type="text/css" media="screen">
+    h1 { text-align: center; margin: 10px;}
+    .netzke-component { width: 1000px; margin: auto; }
+  </style>
 </head>
 <body>
 
